test/ill-formed/0083_union_in_struct_ret.c
struct s {
  union u {
    int x;
  } x;
};

struct s f () {
  struct s ret;
  ret.x.x = 0;
  return ret;
}
